--- a/style.css
+++ b/style.css
@@ -129,6 +129,16 @@ form input[type=submit] {
   box-sizing: border-box;
 }
 
+form input[type=button] {
+  color: white;
+  font: Sans Serif;
+  background-color: #333;
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
 
 .float-container {
   display: flex;
@@ -139,12 +149,21 @@ form input[type=submit] {
   flex: 1;
 } 
 
+button{
+  color: white;
+  font: Sans Serif;
+  background-color: #333;
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  font-size: 18px;
+}
 @media screen and (max-width: 1001px) {
     header .logo {
         width: 100px
     }
 }
-
 
 
 
